frontend/accounts-db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts-db
  namespace: bank-arc-frontend
  labels:
    app: accounts-db
    tier: db    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounts-db
      tier: db
  template:
    metadata:
      labels:
        app: accounts-db
        tier: db
    spec:
      containers:
      - name: accounts-db
        image: gcr.io/bank-of-anthos/accounts-db:v0.1.0
        ports:
          - containerPort: 5432
            name: postgredb
---
apiVersion: v1
kind: Service
metadata:
  name: accounts-db
  labels:
    app: accounts-db
    tier: db
spec:
  ports:
    - port: 5432
      name: postgredb
      targetPort: 5432
      protocol: TCP
  selector:
    app: accounts-db
    tier: db
