frontend/contacts.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contacts
  namespace: bank-arc-frontend
spec:
  selector:
    matchLabels:
      app: contacts
  template:
    metadata:
      labels:
        app: contacts
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: contacts
        image: gcr.io/bank-of-anthos/contacts:v0.1.0
        volumeMounts:
        - name: publickey
          mountPath: "/root/.ssh"
          readOnly: true
        resources:
          requests:
            cpu: 200m
            memory: 64Mi
          limits:
            cpu: 300m
            memory: 128Mi
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: publickey
        secret:
          secretName: jwt-key
          items:
          - key: jwtRS256.key.pub
            path: publickey
---
apiVersion: v1
kind: Service
metadata:
  name: contacts
  namespace: bank-arc-frontend
spec:
  type: ClusterIP
  selector:
    app: contacts
  ports:
  - name: http
    port: 8080
    targetPort: 8080
