frontend/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: arc-frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        version: v1
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: front
        image: arcepamcr.azurecr.io/bank-of-anthos-frontend:v1
        volumeMounts:
        - name: publickey
          mountPath: "/root/.ssh"
          readOnly: true
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
      imagePullSecrets:
      - name: azurearc
      volumes:
      - name: publickey
        secret:
          secretName: jwt-key
          items:
          - key: jwtRS256.key.pub
            path: publickey
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: arc-frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 8080
