frontend/userservice.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
  namespace: bank-arc-frontend
spec:
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: userservice
        image: gcr.io/bank-of-anthos/userservice:v0.1.0
        volumeMounts:
        - name: keys
          mountPath: "/root/.ssh"
          readOnly: true
        ports:
        - name: http-server
          containerPort: 5050
        readinessProbe:
          httpGet:
            path: /ready
            port: 5050
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: keys
        secret:
          secretName: jwt-key
          items:
          - key: jwtRS256.key
            path: privatekey
          - key: jwtRS256.key.pub
            path: publickey


---
apiVersion: v1
kind: Service
metadata:
  name: userservice
  namespace: bank-arc-frontend
spec:
  type: ClusterIP
  selector:
    app: userservice
  ports:
  - name: http
    port: 5050
    targetPort: 5050
